[gd_scene load_steps=13 format=3 uid="uid://cqu7spuwqnbsd"]

[ext_resource type="Script" uid="uid://c137btnv5kn" path="res://scenes/maps/portal.gd" id="1_ju5mt"]

[sub_resource type="BoxMesh" id="BoxMesh_ju5mt"]
size = Vector3(1, 1, 6.155)

[sub_resource type="BoxMesh" id="BoxMesh_b00ba"]
size = Vector3(0.5, 1.855, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ju5mt"]
size = Vector3(1, 2.636078, 6.2685547)

[sub_resource type="PlaneMesh" id="PlaneMesh_pl8s8"]
size = Vector2(5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3t7c"]
albedo_color = Color(0.32658744, 0.297964, 0.15519646, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_yo7wb"]
size = Vector3(4, 3, 5)

[sub_resource type="SphereMesh" id="SphereMesh_ju5mt"]

[sub_resource type="Animation" id="Animation_b00ba"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gate:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(2.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gate:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gate:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bok1s"]
resource_name = "close"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gate:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2.5, -0.25, 0, 0.25, 0, 2.5, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gate:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-3, -0.25, 0, 0.25, 0, 0, -0.16666667, -0.5, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gate:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}

[sub_resource type="Animation" id="Animation_ju5mt"]
resource_name = "open"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gate:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2.5, -0.25, 0, 0.25, 0, 2.5, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gate:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -3, -0.16666667, 0.5, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gate:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8se0"]
_data = {
&"RESET": SubResource("Animation_b00ba"),
&"close": SubResource("Animation_bok1s"),
&"open": SubResource("Animation_ju5mt")
}

[node name="Portal" type="Node3D" groups=["Portal"]]
script = ExtResource("1_ju5mt")

[node name="Gate" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, -3, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_ju5mt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8397639, 0)
mesh = SubResource("BoxMesh_b00ba")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40294, -1)
mesh = SubResource("BoxMesh_b00ba")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0271509, -2)
mesh = SubResource("BoxMesh_b00ba")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40294, 1)
mesh = SubResource("BoxMesh_b00ba")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Gate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0271509, 2)
mesh = SubResource("BoxMesh_b00ba")

[node name="GateBlocker" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4991093, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="GateBlocker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2292328, 0)
shape = SubResource("BoxShape3D_ju5mt")

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_pl8s8")
skeleton = NodePath("../../../Terrain")
surface_material_override/0 = SubResource("StandardMaterial3D_k3t7c")

[node name="EnterArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_yo7wb")

[node name="SpawnCenter" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.763202, 0, 0)

[node name="Preview" type="MeshInstance3D" parent="SpawnCenter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2409172, 0)
mesh = SubResource("SphereMesh_ju5mt")
skeleton = NodePath("../../../Terrain")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d8se0")
}

[connection signal="body_entered" from="EnterArea" to="." method="_on_player_entered"]
